--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <h1>Page title here</h1>
     <p>This is a paragraph about awesomeness.</p>
-    
+    <img src="horse.jpg" alt="A picture of a horse running" width="400px" />
+
   </body>
 
 </html>
