added unordered list
links to apple and google websites

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <p>This is a paragraph about awesomeness.</p>
     <img src="horse.jpg" alt="A picture of a horse running" width="400px" />
 
+
+    <ul>
+        <li><a href="http://www.apple.com/" title="A link to Apple's website">
+          This is a link to Apple's website</a></li>
+        <li><a href="https://www.google.com/" title="A link to Google's website">
+          This is a link to Google's website</a></li>
+        <li>apple</li>
+    </ul>
+
   </body>
 
 </html>
