added mail to link

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <body>
     <h1>Page title here</h1>
     <p>This is a paragraph about awesomeness.</p>
-    <img src="horse.jpg" alt="A picture of a horse running" width="400px" />
 
+    <a href="mailto:lowc68@mail.missouri.edu">
+      <img src="horse.jpg" alt="A picture of a horse running" width="400px" />
+    </a>
 
     <ul>
         <li><a href="http://www.apple.com/" title="A link to Apple's website">
-          This is a link to Apple's website</a></li>
+          A link to Apple's website</a></li>
         <li><a href="https://www.google.com/" title="A link to Google's website">
-          This is a link to Google's website</a></li>
-        <li>apple</li>
+          A link to Google's website</a></li>
+        <li><a href="index2.html" title="A link to another page in my site">
+          A link to another page in my site</a></li>
     </ul>
 
   </body>
