added image and joke
added image and joke

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html>
   <head>
     <title>Lauren's awesome example page</title>
   </head>
 
   <body>
-    <h1>Page title here</h1>
-    <p>This is a paragraph about awesomeness.</p>
+    <h1>Lauren Wrigley's page</h1>
+    <p>Why was the scarecrow promoted? Because he was outstanding in his field!</p>
 
     <a href="mailto:lowc68@mail.missouri.edu">
-      <img src="horse.jpg" alt="A picture of a horse running" width="400px" />
+      <img src="profile.jpg" alt="A picture of Lauren Wrigley" width="400px" />
     </a>
 
     <ul>
