--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Lauren's awesome example page</title>
+    <meta http-equiv="content-type"
+      content="text/html;charset=utf-8" />
   </head>
 
   <body>
@@ -12,8 +14,18 @@
     <p>Why was the scarecrow promoted? Because he was outstanding in his field!</p>
 
     <a href="mailto:lowc68@mail.missouri.edu">
-      <img src="profile.jpg" alt="A picture of Lauren Wrigley" width="400px" />
+      <img src="profile.jpg" alt="A picture of Lauren Wrigley" width="200px" />
     </a>
+
+    <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
+
+    <p>Navigation</p>
+    <ul>
+        <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
+          A link to my blog</a></li>
+    </ul>
+
+    <p>Other links</p>
 
     <ul>
         <li><a href="http://www.apple.com/" title="A link to Apple's website">
