--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <ul>
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           A link to my blog</a></li>
+        <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
+          A link to the Missouri Business Alert</a></li>
     </ul>
 
     <p>Other links</p>
