--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           A link to my blog</a></li>
         <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
           A link to the Missouri Business Alert</a></li>
+        <li><a href="https://github.com/j4502-fs16/class/wiki/Project-options" title="A link to project options">
+          A link to project options</a></li>
     </ul>
 
     <p>Other links</p>
