--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Lauren's awesome example page</title>
     <meta http-equiv="content-type"
       content="text/html;charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
+    <div id="container">
     <h1>Lauren Wrigley's page</h1>
     <p>Why was the scarecrow promoted? Because he was outstanding in his field!</p>
 
@@ -20,7 +22,7 @@
     <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
 
     <p>Navigation</p>
-    <ul>
+    <ul id="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           A link to my blog</a></li>
         <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
@@ -31,15 +33,17 @@
 
     <p>Other links</p>
 
-    <ul>
+    <ul id="nav2">
         <li><a href="http://www.apple.com/" title="A link to Apple's website">
           A link to Apple's website</a></li>
         <li><a href="https://www.google.com/" title="A link to Google's website">
           A link to Google's website</a></li>
         <li><a href="index2.html" title="A link to another page in my site">
           A link to another page in my site</a></li>
+        <li><a href="oldindex.html" title="A link to my old site">
+            A link to my old site</a></li>
     </ul>
-
+  </div>
   </body>
 
 </html>
