changed some things
made it float

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Lauren's awesome example page</title>
     <meta http-equiv="content-type"
@@ -24,24 +21,24 @@
     <p>Navigation</p>
     <ul id="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
-          A link to my blog</a></li>
+          Blog</a></li>
         <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
-          A link to the Missouri Business Alert</a></li>
+          MBA</a></li>
         <li><a href="https://github.com/j4502-fs16/class/wiki/Project-options" title="A link to project options">
-          A link to project options</a></li>
+          Project Options</a></li>
     </ul>
 
     <p>Other links</p>
 
     <ul id="nav2">
         <li><a href="http://www.apple.com/" title="A link to Apple's website">
-          A link to Apple's website</a></li>
+          Apple</a></li>
         <li><a href="https://www.google.com/" title="A link to Google's website">
-          A link to Google's website</a></li>
+          Google</a></li>
         <li><a href="index2.html" title="A link to another page in my site">
-          A link to another page in my site</a></li>
+          Site</a></li>
         <li><a href="oldindex.html" title="A link to my old site">
-            A link to my old site</a></li>
+            Old site</a></li>
     </ul>
   </div>
   </body>
