--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Lauren's awesome example page</title>
     <meta http-equiv="content-type"
       content="text/html;charset=utf-8" />
+      <link
+    href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i|PT+Serif:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
+
   </head>
 
   <body>
@@ -17,8 +20,9 @@
     </a>
 
     <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
-
-    <p>Navigation</p>
+<div id="header">
+    Navigation
+</div>
     <ul id="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           Blog</a></li>
@@ -28,8 +32,10 @@
           Project Options</a></li>
     </ul>
 
-    <p>Other links</p>
 
+<div id="header2">
+    Other links
+</div>
     <ul id="nav2">
         <li><a href="http://www.apple.com/" title="A link to Apple's website">
           Apple</a></li>
@@ -42,5 +48,6 @@
     </ul>
   </div>
   </body>
+
 
 </html>
