--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
   <head>
     <title>Lauren's awesome example page</title>
     <meta http-equiv="content-type"
@@ -11,42 +10,30 @@
   </head>
 
   <body>
-    <div id="container">
+<div id="container">
     <h1>Lauren Wrigley's page</h1>
-    <p>Why was the scarecrow promoted? Because he was outstanding in his field!</p>
+      <p>Why was the scarecrow promoted? Because he was outstanding in his field!</p>
 
-    <a href="mailto:lowc68@mail.missouri.edu">
+      <a href="mailto:lowc68@mail.missouri.edu">
       <img src="profile.jpg" alt="A picture of Lauren Wrigley" width="200px" />
-    </a>
+      </a>
 
-    <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
-<div id="header">
-    Navigation
-</div>
+      <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
+
     <ul id="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           Blog</a></li>
         <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
           MBA</a></li>
-        <li><a href="https://github.com/j4502-fs16/class/wiki/Project-options" title="A link to project options">
-          Project Options</a></li>
-    </ul>
-
-
-<div id="header2">
-    Other links
-</div>
-    <ul id="nav2">
-        <li><a href="http://www.apple.com/" title="A link to Apple's website">
-          Apple</a></li>
-        <li><a href="https://www.google.com/" title="A link to Google's website">
-          Google</a></li>
         <li><a href="index2.html" title="A link to another page in my site">
-          Site</a></li>
+            Page 2</a></li>
         <li><a href="oldindex.html" title="A link to my old site">
-            Old site</a></li>
+              Old site</a></li>
+
     </ul>
-  </div>
+
+
+</div>
   </body>
 
 
