--- a/index.html
+++ b/index.html
@@ -26,22 +26,23 @@
     <h1>Lauren Wrigley's page</h1>
 
 <div class="wrapper">
-    <aside class="aside aside-1">
-      <p>Best joke ever: Why was the scarecrow promoted? Because he was outstanding in his field!</p>
-    </aside>
+
+        <aside class="aside aside-1">
+          <p>Best joke ever: Why was the scarecrow promoted? Because he was outstanding in his field!</p>
+        </aside>
     <article class="main">
-      <a href="mailto:lowc68@mail.missouri.edu">
-      <img src="profile.jpg" alt="A picture of Lauren Wrigley" width="200px" />
+      <a href="mailto:lowc68@mail.missouri.edu"><img src="profile.jpg" alt="A picture of Lauren Wrigley" width="200px" />
       </a>
       <p>Maecenas quam purus, malesuada id viverra eget, porta et elit. Sed vel porttitor augue. Maecenas dapibus justo dolor, a gravida quam ullamcorper eu. Donec vel rhoncus velit, eget eleifend tortor. Quisque euismod urna quam, ac feugiat enim auctor at. Sed urna sapien, ultrices eget lectus quis, semper posuere lorem. Cras finibus convallis dui, eget varius sapien dignissim sit amet. Nunc ornare aliquet sollicitudin. In hac habitasse platea dictumst. Aenean suscipit neque massa, id laoreet urna pellentesque a. Donec urna nisi, facilisis ac ultricies nec, porta non ex. Proin et sem eu velit viverra gravida id ut ex. Nulla rhoncus dignissim arcu, in faucibus quam viverra at.</p>
     </article>
+
     <aside class="aside aside-2">
       <p> Fun fact: My favorite color is blue</p>
     </aside>
+    </div>
     <footer class="footer">
       <p> Contact Lauren Wrigley at lowc68@mail.missouri.edu </p>
     </footer>
-  </div>
   </body>
 
 
