--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta http-equiv="content-type"
       content="text/html;charset=utf-8" />
       <link
-    href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i|PT+Serif:400,700" rel="stylesheet">
+    href="https://fonts.googleapis.com/css?family=PT+Sans:400,400iPT+Serif:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
+
 
   <body>
     <ul class="nav">
@@ -30,16 +31,15 @@
         <aside class="aside aside-1">
           <p>Best joke ever: Why was the scarecrow promoted? Because he was outstanding in his field!</p>
         </aside>
-    <article class="main">
-      <a href="mailto:lowc68@mail.missouri.edu"><img src="profile.jpg" alt="A picture of Lauren Wrigley" width="200px" />
+    <div class="main">
+      <a href="mailto:lowc68@mail.missouri.edu"><img src="profile.jpg" alt="A picture of Lauren Wrigley"/>
       </a>
-      <article class="hidden">Maecenas quam purus, malesuada id viverra eget, porta et elit. Sed vel porttitor augue. Maecenas dapibus justo dolor, a gravida quam ullamcorper eu. Donec vel rhoncus velit, eget eleifend tortor. Quisque euismod urna quam, ac feugiat enim auctor at. Sed urna sapien, ultrices eget lectus quis, semper posuere lorem. Cras finibus convallis dui, eget varius sapien dignissim sit amet. Nunc ornare aliquet sollicitudin. In hac habitasse platea dictumst. Aenean suscipit neque massa, id laoreet urna pellentesque a. Donec urna nisi, facilisis ac ultricies nec, porta non ex. Proin et sem eu velit viverra gravida id ut ex. Nulla rhoncus dignissim arcu, in faucibus quam viverra at.</p>
-    </article>
-  </article>
+      <p> Maecenas quam purus, malesuada id viverra eget, porta et elit. Sed vel porttitor augue. Maecenas dapibus justo dolor, a gravida quam ullamcorper eu. Donec vel rhoncus velit, eget eleifend tortor. Quisque euismod urna quam, ac feugiat enim auctor at. Sed urna sapien, ultrices eget lectus quis, semper posuere lorem. Cras finibus convallis dui, eget varius sapien dignissim sit amet. Nunc ornare aliquet sollicitudin. In hac habitasse platea dictumst. Aenean suscipit neque massa, id laoreet urna pellentesque a. Donec urna nisi, facilisis ac ultricies nec, porta non ex. Proin et sem eu velit viverra gravida id ut ex. Nulla rhoncus dignissim arcu, in faucibus quam viverra at.</p>
+    </div>
 
     <p>Pellentesque fermentum ligula lectus, in porta tellus efficitur ullamcorper. Sed a varius dui. Mauris ullamcorper risus sed fermentum luctus. Pellentesque eu finibus diam. Duis eros enim, hendrerit sed aliquam in, congue eget velit. Proin elementum, dui ut bibendum commodo, arcu quam convallis risus, tristique placerat nunc lectus convallis augue. Aliquam vel magna pretium, finibus orci ut, gravida dui. Curabitur et mattis lectus. Fusce condimentum rhoncus rhoncus.<p>
 
     <p>Phasellus tincidunt nisl est, id laoreet nibh fringilla ut. Ut rhoncus laoreet pharetra. Donec commodo nunc risus, ut congue quam placerat id. Vivamus venenatis lorem quis varius mattis. Pellentesque iaculis turpis id mollis cursus. Pellentesque rhoncus, lorem et sagittis fringilla, metus sapien luctus lacus, gravida tincidunt odio sem a odio. Ut consectetur elit eget purus ornare ullamcorper. Donec sit amet interdum est. Aliquam imperdiet sapien lacinia convallis rutrum.</p>
-
+</div>
 
 </html>
