--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-  <head lang="en">
+<html lang="en">
+  <head>
     <title>Lauren's awesome example page</title>
     <meta http-equiv="content-type"
       content="text/html;charset=utf-8" />
