--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
   <body>
+  <a class="menu-trigger" href="#">&#9776;<a/>
     <ul class="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           Blog</a></li>
