styled and added collapsing menu

--- a/index.2.5.html
+++ b/index.2.5.html
@@ -7,18 +7,13 @@
       <link
     href="https://fonts.googleapis.com/css?family=PT+Sans:400,400iPT+Serif:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script src="menu.js" type="text/javascript"></script>
 
   </head>
 
 
   <body>
-    <header>
-    <h1>Lauren Wrigley's Page</h1>
-    <nav>
-      <a class="menu-trigger" href="#">&#9776;<a/>
-      <ul>
+
+    <ul class="nav">
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           Blog</a></li>
         <li><a href="http://www.missouribusinessalert.com/" title="A link to the Missouri Business Alert">
@@ -28,9 +23,10 @@
         <li><a href="oldindex.html" title="A link to my old site">
               Old site</a></li>
 
-      </ul>
-    </nav>
-  </header>
+    </ul>
+
+
+    <h1>Lauren Wrigley's page</h1>
 
 <div class="wrapper">
 
