--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
     <h1>Lauren Wrigley's Page</h1>
     <nav>
-      <a class="menu-trigger" href="#">&#9776;<a/>
+      <a class="menu-trigger" href="#">&#9776;</a>
       <ul>
         <li><a href="https://laurenwrigley.wordpress.com/" title="A link to my blog">
           Blog</a></li>
