added map and made responsive

--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
 
     <p>Phasellus tincidunt nisl est, id laoreet nibh fringilla ut. Ut rhoncus laoreet pharetra. Donec commodo nunc risus, ut congue quam placerat id. Vivamus venenatis lorem quis varius mattis. Pellentesque iaculis turpis id mollis cursus. Pellentesque rhoncus, lorem et sagittis fringilla, metus sapien luctus lacus, gravida tincidunt odio sem a odio. Ut consectetur elit eget purus ornare ullamcorper. Donec sit amet interdum est. Aliquam imperdiet sapien lacinia convallis rutrum.</p>
 </div>
-
+<div class="map-wrapper">
+  <iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=Shakespeares%20pizza&key=AIzaSyCV-_80YebqivoF-KrK6L1t5TMUU3APSys" allowfullscreen></iframe>
+</div>
 </html>
